ecmascript/parser/tests/test262-error-references/fail/1c6ba8177a9624f0.js.stderr
error: Unterminated block comment
 --> $DIR/tests/test262-parser/fail/1c6ba8177a9624f0.js:1:1
  |
1 | /*
  | ^^^

